Move all content pages to the pages folder and add small delay to questionaire transition

--- a/HeromeApp/HeromeApp/HeromeApp/Pages/PolishPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/PolishPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HeromeApp.NailsPage"
+             x:Class="HeromeApp.Pages.PolishPage"
              xmlns:views="clr-namespace:HeromeApp.Views"
              BackgroundColor="#0A2F5C"
              NavigationPage.HasNavigationBar="false">
@@ -23,13 +23,11 @@
                     HeightRequest="1"/>
             </StackLayout>
 
-            <!-- The questionaire -->       
+            <!-- The questionaire -->
             <views:HeromeQuestionaireView 
                 x:Name="questionaire"
                 HorizontalOptions="FillAndExpand" 
                 VerticalOptions="FillAndExpand"/>
-
-
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
