--- a/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:HeromeApp.Controls"
-             x:Class="HeromeApp.LoginPage"
+             x:Class="HeromeApp.Pages.LoginPage"
              BackgroundImage="background_login"
              NavigationPage.HasNavigationBar="false">
     <ContentPage.Content>
