Add final icons and background images and modify layouts accordingly. Reduce topic pages to a single questionaire page

--- a/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
@@ -3,115 +3,130 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:HeromeApp.Controls"
              x:Class="HeromeApp.Pages.LoginPage"
-             BackgroundImage="background_login"
+             BackgroundImage="background_start"
              NavigationPage.HasNavigationBar="false">
     <ContentPage.Content>
-        <StackLayout Spacing="5" 
+        <StackLayout Padding="30, 20, 30, 0">
+            <Image Source="logo_white" 
+                   HorizontalOptions="FillAndExpand" 
+                   VerticalOptions="FillAndExpand"
+                   HeightRequest="130"
+                   Aspect="Fill"/>
+            <Label HorizontalOptions="CenterAndExpand"
+                    Text="Jouw persoonlijke hand &amp; nageladvies"
+                    TextColor="White"
+                    FontFamily="{StaticResource OpenSans-Regular}"
+                    FontSize="Small"/>
+
+            <StackLayout Spacing="5" 
                      VerticalOptions="Fill"  
-                     Padding="40, 200, 40, 50">
-            <!-- Login with regular credentials -->
-            <StackLayout Orientation="Vertical">
-                <controls:HeromeImageEntry 
-                    x:Name="txtEmail"
-                    Placeholder="E-mail"
-                    PlaceholderColor="White" 
-                    TextColor="White"
-                    Keyboard="Email"
-                    FontFamily="{StaticResource OpenSans-Light}"
-                    FontSize="Small"
-                    Image="icon_mail"
-                    ImageWidth="25"
-                    ImageHeight="20"/>
-                <controls:HeromeImageEntry 
-                    x:Name="txtPassword"
-                    Placeholder="Wachtwoord" 
-                    PlaceholderColor="White" 
-                    FontFamily="{StaticResource OpenSans-Light}"
-                    FontSize="Small"
-                    TextColor="White"
-                    Image="icon_lock"
-                    ImageWidth="25"
-                    ImageHeight="30"
-                    IsPassword="True"/>
-                <controls:HeromeButton 
-                    Text="Inloggen"
-                    TextColor="White"
-                    HeightRequest="40"
-                    FontFamily="{StaticResource OpenSans-Bold}"
-                    BackgroundColor="#80D6F1"
-                    Clicked="LoginButton_Clicked"
-                    CornerRadius="3"/>
-                <controls:HeromeButton  
-                    Text="Registreren"
-                    TextColor="White"
-                    HeightRequest="40"
-                    FontFamily="{StaticResource OpenSans-Bold}"
-                    BackgroundColor="#012B65"
-                    Clicked="RegisterButton_Clicked"
-                    CornerRadius="3"/>
-                <controls:HeromeButton  
+                     Padding="10, 30, 10, 50">
+
+                <!-- Login with regular credentials -->
+                <StackLayout Orientation="Vertical">
+                    <controls:HeromeImageEntry 
+                        x:Name="txtEmail"
+                        Placeholder="E-mail"
+                        PlaceholderColor="White" 
+                        TextColor="White"
+                        Keyboard="Email"
+                        FontFamily="{StaticResource OpenSans-Light}"
+                        FontSize="Small"
+                        Image="icon_email"
+                        ImageWidth="25"
+                        ImageHeight="20"/>
+                    <controls:HeromeImageEntry 
+                        x:Name="txtPassword"
+                        Placeholder="Wachtwoord" 
+                        PlaceholderColor="White" 
+                        FontFamily="{StaticResource OpenSans-Light}"
+                        FontSize="Small"
+                        TextColor="White"
+                        Image="icon_lock"
+                        ImageWidth="25"
+                        ImageHeight="30"
+                        IsPassword="True"/>
+                    <controls:HeromeButton 
+                        Text="Inloggen"
+                        TextColor="White"
+                        HeightRequest="40"
+                        FontFamily="{StaticResource OpenSans-Bold}"
+                        BackgroundColor="#80D6F1"
+                        Clicked="LoginButton_Clicked"
+                        CornerRadius="3"/>
+                    <controls:HeromeButton  
+                        Text="Registreren"
+                        TextColor="White"
+                        HeightRequest="40"
+                        FontFamily="{StaticResource OpenSans-Bold}"
+                        BackgroundColor="#012B65"
+                        Clicked="RegisterButton_Clicked"
+                        CornerRadius="3"/>
+                    <controls:HeromeButton  
+                        HorizontalOptions="CenterAndExpand"
+                        Text="Wachtwoord vergeten?"
+                        TextColor="White"
+                        FontFamily="{StaticResource OpenSans-Light}"
+                        FontSize="Micro"
+                        BackgroundColor="Transparent"
+                        Clicked="ForgotPassword_Clicked"/>
+                </StackLayout>
+
+
+
+                <!-- Login with social media -->
+                <StackLayout Spacing="10" VerticalOptions="Center">
+                    <Label
+                        HorizontalOptions="CenterAndExpand"
+                        Text="Inloggen via Social Media"
+                        TextColor="White"
+                        FontFamily="{StaticResource OpenSans-Light}"
+                        FontSize="Micro"/>
+                    <StackLayout HorizontalOptions="Fill"  Orientation="Horizontal" Spacing="5">
+                        <BoxView 
+                            Color="White"       
+                            HorizontalOptions="FillAndExpand"
+                            VerticalOptions="Center"
+                            HeightRequest="2"/>
+                        <controls:HeromeBoxView 
+                            CornerRadius="25"
+                            Color="White"
+                            WidthRequest="4"
+                            HeightRequest="4"/>
+                        <BoxView 
+                            Color="White"
+                            HorizontalOptions="FillAndExpand"
+                            VerticalOptions="Center"
+                            HeightRequest="2"/>
+                    </StackLayout>
+                    <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Spacing="5">
+                        <Image
+                            x:Name="imgFacebookIcon"
+                            Source="icon_facebook"
+                            WidthRequest="40"
+                            HeightRequest="40"/>
+                        <Image
+                            x:Name="imgTwitterIcon"
+                            Source="icon_twitter"
+                            WidthRequest="40"
+                            HeightRequest="40"/>
+                    </StackLayout>
+                </StackLayout>
+
+
+                <!-- Continue without logging in -->
+                <controls:HeromeButton
                     HorizontalOptions="CenterAndExpand"
-                    Text="Wachtwoord vergeten?"
+                    VerticalOptions="End"
+                    Text="Doorgaan zonder registreren"
                     TextColor="White"
+                    Opacity="0.5"
                     FontFamily="{StaticResource OpenSans-Light}"
                     FontSize="Micro"
                     BackgroundColor="Transparent"
-                    Clicked="ForgotPassword_Clicked"/>
+                    Clicked="SkipLogin_Clicked"/>
             </StackLayout>
-
-
-
-            <!-- Login with social media -->
-            <StackLayout Spacing="10" VerticalOptions="Center">
-                <Label
-                    HorizontalOptions="CenterAndExpand"
-                    Text="Inloggen via Social Media"
-                    TextColor="White"
-                    FontFamily="{StaticResource OpenSans-Light}"
-                    FontSize="Micro"/>
-                <StackLayout HorizontalOptions="Fill"  Orientation="Horizontal" Spacing="5">
-                    <BoxView 
-                        Color="White"       
-                        HorizontalOptions="FillAndExpand"
-                        VerticalOptions="Center"
-                        HeightRequest="2"/>
-                    <controls:HeromeBoxView 
-                        CornerRadius="25"
-                        Color="White"
-                        WidthRequest="4"
-                        HeightRequest="4"/>
-                    <BoxView 
-                        Color="White"
-                        HorizontalOptions="FillAndExpand"
-                        VerticalOptions="Center"
-                        HeightRequest="2"/>
-                </StackLayout>
-                <StackLayout HorizontalOptions="Center" Orientation="Horizontal" Spacing="5">
-                    <Image
-                        x:Name="imgFacebookIcon"
-                        Source="icon_facebook"
-                        WidthRequest="40"
-                        HeightRequest="40"/>
-                    <Image
-                        x:Name="imgTwitterIcon"
-                        Source="icon_twitter"
-                        WidthRequest="40"
-                        HeightRequest="40"/>
-                </StackLayout>
-            </StackLayout>
-
-
-            <!-- Continue without logging in -->
-            <controls:HeromeButton
-                HorizontalOptions="CenterAndExpand"
-                VerticalOptions="End"
-                Text="Doorgaan zonder registreren"
-                TextColor="White"
-                Opacity="0.5"
-                FontFamily="{StaticResource OpenSans-Light}"
-                FontSize="Micro"
-                BackgroundColor="Transparent"
-                Clicked="SkipLogin_Clicked"/>
         </StackLayout>
+
     </ContentPage.Content>
 </ContentPage>
