--- a/HeromeApp/HeromeApp/HeromeApp/Pages/QuestionairePage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/QuestionairePage.xaml
@@ -45,7 +45,7 @@
                 HorizontalOptions="CenterAndExpand"
                 Text=""
                 TextColor="White"
-                FontFamily="{StaticResource OpenSans-Regular}"
+                FontFamily="{StaticResource OpenSans-Bold}"
                 FontSize="Small"/>
         </StackLayout>
     </ContentPage.Content>
