Add color picker page, add hand overlay to camera preview, and fix some layout issues in the login page, also remove per-res drawables

--- a/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
@@ -33,7 +33,7 @@
                         FontFamily="{StaticResource OpenSans-Light}"
                         FontSize="Small"
                         Image="icon_email"
-                        ImageWidth="25"
+                        ImageWidth="30"
                         ImageHeight="20"/>
                     <controls:HeromeImageEntry 
                         x:Name="txtPassword"
@@ -45,6 +45,7 @@
                         Image="icon_lock"
                         ImageWidth="25"
                         ImageHeight="30"
+                        ImageSpacing="20"
                         IsPassword="True"/>
                     <controls:HeromeButton 
                         Text="Inloggen"
