Add page animations

--- a/HeromeApp/HeromeApp/HeromeApp/Pages/ColorPickerPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/ColorPickerPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<forms:AnimationPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HeromeApp.Pages.ColorPickerPage"
+             xmlns:forms="clr-namespace:FormsControls.Base;assembly=FormsControls.Base"
              BackgroundImage="background_nails"
              NavigationPage.HasNavigationBar="false">
     <ContentPage.Content>
@@ -94,4 +95,4 @@
             
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</forms:AnimationPage>
