--- a/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<forms:AnimationPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:HeromeApp.Controls"
+             xmlns:forms="clr-namespace:FormsControls.Base;assembly=FormsControls.Base"
              x:Class="HeromeApp.Pages.LoginPage"
              BackgroundImage="background_start"
              NavigationPage.HasNavigationBar="false">
@@ -132,4 +133,4 @@
         </StackLayout>
 
     </ContentPage.Content>
-</ContentPage>
+</forms:AnimationPage>
