--- a/HeromeApp/HeromeApp/HeromeApp/Pages/NailsPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/NailsPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<forms:AnimationPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HeromeApp.Pages.NailsPage"
+             xmlns:forms="clr-namespace:FormsControls.Base;assembly=FormsControls.Base"
              xmlns:views="clr-namespace:HeromeApp.Views"
              BackgroundImage="background_nails"
              NavigationPage.HasNavigationBar="false">
@@ -40,4 +41,4 @@
                 VerticalOptions="FillAndExpand"/>
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</forms:AnimationPage>
