--- a/HeromeApp/HeromeApp/HeromeApp/Pages/ProductPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/ProductPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<forms:AnimationPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:HeromeApp.Controls"
+             xmlns:forms="clr-namespace:FormsControls.Base;assembly=FormsControls.Base"
              x:Class="HeromeApp.Pages.ProductPage"
              BackgroundImage="background_nails"
              NavigationPage.HasNavigationBar="false">
@@ -81,4 +82,4 @@
             </Grid>
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</forms:AnimationPage>
