--- a/HeromeApp/HeromeApp/HeromeApp/Pages/QuestionairePage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/QuestionairePage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<forms:AnimationPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:forms="clr-namespace:FormsControls.Base;assembly=FormsControls.Base"
              x:Class="HeromeApp.Pages.QuestionairePage"
              xmlns:views="clr-namespace:HeromeApp.Views"
              BackgroundImage="background_nails"
@@ -49,4 +50,4 @@
                 FontSize="Small"/>
         </StackLayout>
     </ContentPage.Content>
-</ContentPage>
+</forms:AnimationPage>
