Migrate project to VS2019 and remove HeromeBoxView (BoxView now supports CornerRadius by default)

--- a/HeromeApp/HeromeApp/HeromeApp/Pages/ProductPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/ProductPage.xaml
@@ -56,7 +56,7 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <controls:HeromeBoxView 
+                    <BoxView 
                         Grid.Row="0"
                         Grid.Column="0"
                         BackgroundColor="#6fb9d6"
