--- a/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/LoginPage.xaml
@@ -92,7 +92,7 @@
                             HorizontalOptions="FillAndExpand"
                             VerticalOptions="Center"
                             HeightRequest="2"/>
-                        <controls:HeromeBoxView 
+                        <BoxView 
                             CornerRadius="25"
                             Color="White"
                             WidthRequest="4"
