--- a/HeromeApp/HeromeApp/HeromeApp/Pages/ColorPickerPage.xaml
+++ b/HeromeApp/HeromeApp/HeromeApp/Pages/ColorPickerPage.xaml
@@ -62,10 +62,10 @@
                     VerticalOptions="StartAndExpand"
                     HeightRequest="70"
                     Spacing="20">
-                    <Image HorizontalOptions="FillAndExpand" Source="icon_skintype"></Image>
-                    <Image HorizontalOptions="FillAndExpand" Source="icon_nail_length"></Image>
-                    <Image HorizontalOptions="FillAndExpand" Source="icon_nail_skintype"></Image>
-                    <Image HorizontalOptions="FillAndExpand" Source="icon_nail_color"></Image>
+                    <Image HorizontalOptions="FillAndExpand" Source="icon_skintype" x:Name="imgSkintype"/>
+                    <Image HorizontalOptions="FillAndExpand" Source="icon_nail_length" x:Name="imgLength"/>
+                    <Image HorizontalOptions="FillAndExpand" Source="icon_nail_skintype" x:Name="imgNailtype"/>
+                    <Image HorizontalOptions="FillAndExpand" Source="icon_nail_color" x:Name="imgNailColor"/>
                 </StackLayout>
                     
             </StackLayout>
@@ -90,6 +90,15 @@
                     TranslationY="100"
                     Rotation="55"
                     Source="hand"
+                    />
+
+                <BoxView
+                    x:Name="menuBox"
+                    Scale="0"
+                    IsEnabled="False"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    BackgroundColor="White"
                     />
             </Grid>
             
